--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             font-size: 20px;
             color: white;
         }
+        .content {
+            text-align: center;
+        }
+        .content a :hover{
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -60,7 +66,7 @@
     </div>
   <footer> 
     <div class = "content">
-        <span> coded by <a href =""</span>
+        <span> Coded by <a href ="https://github.com/Ronalyn2004/MLBB"target="blank"> Ronalyn Paragon </a> an is an open-source.</span>
     </div>
   </footer>
 </body>
